# rdlp

./: Cargo.toml  LICENSE  Makefile  README.md  a.txt  development.toml  example.toml  production.toml
.github/workflows/: docker-publish.yml
cases/: test_email.txt
config/: development.toml
deploy/: Dockerfile
docs/: README.zh-CN.md
src/: constants.rs  lib.rs  macros.rs  main.rs
src/conf/: conf.rs  mod.rs
src/engine/: engine.rs  updated_engine.rs
src/errors/: errors.rs  mod.rs
src/log/: logger.rs
src/logger/: logger.rs
src/rdlp/: detect.rs  engine.rs  filter.rs  mod.rs  result.rs  verify.rs
src/result/: result.rs
tests/: server_integration_tests.rs  test_cast_1.txt  test_phone.txt
