# Cargo.toml
#
# This is the configuration file for the project "rdlp".
# It contains information about the project such as its name, version,
# and dependencies.
#
# Author: @bayuncao
# License: MIT
#
# Dependencies:
# - toml: 0.8.8
# - structopt: 0.3
# - serde: 1.0 (with "derive" feature)
# - log: 0.4
# - env_logger: 0.9.3
# - lazy_static: 1.4.0
# - once_cell: 1.7.2
#
# Macros: macros.rs
#
# This file is part of the "rdlp" project, which is a Rust program for XYZ.
# It is used to configure the project and specify its dependencies.
#
# Usage: This file should be placed in the root directory of the project
# and should not be modified directly unless you know what you're doing.

[package]
name = "rdlp"
version = "0.1.0"
edition = "2021"


[dependencies]
toml = "0.8.8"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9.3"
lazy_static = "1.4.0"
once_cell = "1.7.2"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
fern = "0.6" 
chrono = "0.4" 
regex = "1.5"
glob = "0.3"